# MOOS-IVP-Internship

./: README.md
missions/defend/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldNodeBroker.moos
src/pCompass/: CMakeLists.txt  Compass.cpp  Compass.h  Compass_Info.cpp  Compass_Info.h  main.cpp  pCompass.moos
